# raycaster

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  README.md  test_minimal.txt
demo_game/: CMakeLists.txt  main.c
demo_game/assets/maps/: map.txt  test_valid.txt
depricated/include/core/: Config.h
depricated/include/input/: input.h
depricated/include/interface/: window_ctx.h
depricated/include/render/: texture.h
depricated/include/sim/: Map.h  Scene.h  render_fp.h
depricated/src/: main.c
depricated/src/actors/: actor.c  player.c
depricated/src/event/: event.c
depricated/src/platform/sdl/: sdl_input.c  sdl_window_event.c
depricated/src/render/: texture.c
depricated/src/sim/: render_fp.c
depricated/src/util/: timing.c
game/: CMakeLists.txt  main.c
include/: raycaster.h
include/actors/: Player.h
include/core/: Config.h
include/render/: hud.h
include/sim/: Scene.h  render_2d.h
include/util/: timing.h
libraycaster/: CMakeLists.txt
libraycaster/cmake/: embed_shaders.cmake
libraycaster/include/: raycaster.h
libraycaster/include/raycaster/: actor.h  camera.h  engine.h  gpu_renderer.h  input.h  level.h  raycaster.h  renderer.h  types.h  vector.h
libraycaster/include/util/: vector.h
libraycaster/internal/: engine_int.h  input_int.h  renderer_int.h
libraycaster/internal/asset/: texture_int.h
libraycaster/internal/level/: level_int.h  map_level_int.h
libraycaster/internal/platform/sdl/: sdl_input_int.h  sdl_renderer_int.h
libraycaster/internal/renderer/: cpu_renderer_int.h  gpu_renderer_int.h  renderer_int.h
libraycaster/internal/util/: general.h
libraycaster/shaders/: wall.hlsl
libraycaster/src/: input.c
libraycaster/src/asset/: texture.c
libraycaster/src/input/: input.c  input_sdl.c
libraycaster/src/level/: level.c  map_level.c  map_level_vtbl.c
libraycaster/src/platform/sdl/: sdl_input.c  sdl_renderer.c  sdl_window.c  sdl_window_event.c
libraycaster/src/render/: frame.c  gpu_renderer.c  texture.c
libraycaster/src/renderer/: cpu_renderer.c  gpu_renderer.c  hardware.c  renderer.c  software.c
libraycaster/src/sim/: actor.c  camera.c  engine.c  map_world.c
libraycaster/src/util/: general.c  vector.c
libraycaster/tests/: test_actor.c  test_camera.c  test_general.c  test_input.c  test_level.c  test_map_level.c  test_vector.c
shaders/: floor.hlsl  sprite.hlsl
src/: main.c
src/actors/: Player.c
src/core/: Config.c
src/interface/: window_ctx.c
src/platform/sdl/: sdl_renderer.c  sdl_window.c
src/render/: hud.c  texture.c
src/sim/: Map.c  Scene.c  render_2d.c  render_fp.c
src/util/: timing.c
tests/: test_map.c  test_sprite.c  test_vector.c  unity.c  unity.h
tools/map_editor/: event_bus.py  layout_manager.py  main.py  map_editor.py  options_bar.py  pyproject.toml  screen_area.py  texture_pallet.py  theme.json
tools/map_editor_electron/: index.html  package-lock.json  package.json  vite.config.ts
tools/map_editor_electron/electron/: main.ts  preload.ts
tools/map_editor_electron/src/: App.tsx  electron.d.ts  index.css
tools/map_editor_electron/src/components/: GridEditor.tsx  SpritePanel.tsx  TexturePalette.tsx  Toolbar.tsx
tools/map_editor_electron/src/map/: constants.ts  parser.ts  types.ts
tools/map_editor_electron/src/store/: mapStore.ts
tools/map_editor_electron/src/utils/: textureCache.ts
